--- a/src/General/css/layout.css
+++ b/src/General/css/layout.css
@@ -487,7 +487,7 @@ th {
   padding-left: 17px;
 }
 .a-icon,
-#shortcuts .icon {
+#shortcuts .fa {
   display: inline-block;
   width: 15px;
   height: 15px;
@@ -496,7 +496,7 @@ th {
   cursor: pointer;
 }
 .invisible-icons .a-icon,
-.invisible-icons #shortcuts .icon {
+.invisible-icons #shortcuts .fa {
   opacity: 0;
 }
 #so-nav,
@@ -534,7 +534,7 @@ th {
 #navPrev:hover,
 #navNext:hover,
 .a-icon:hover,
-#shortcuts .icon:hover {
+#shortcuts .fa:hover {
   opacity: 1 !important;
 }
 /* Updater / Thread Stats */
