--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -64,6 +64,9 @@ a {
   display: block !important;
   overflow: visible !important;
 }
+.fileText {
+  margin: 0 20px;
+}
 [hidden] {
   display: none !important;
 }
