--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -150,11 +150,11 @@ a {
 .fixed.top-header #header-bar {
   border-bottom-width: 1px;
 }
-.fixed.bottom #header-bar {
+.fixed.bottom-header #header-bar {
   box-shadow: 0 -1px 2px rgba(0, 0, 0, .15);
   border-top-width: 1px;
 }
-.fixed.bottom #header-bar .menu-button i {
+.fixed.bottom-header #header-bar .menu-button i {
   border-top: none;
   border-bottom: 6px solid;
 }
@@ -170,7 +170,7 @@ a {
   -webkit-transform: translateY(-100%);
   transform: translateY(-100%);
 }
-.fixed.bottom #header-bar.autohide:not(:hover) {
+.fixed.bottom-header #header-bar.autohide:not(:hover) {
   -webkit-transform: translateY(100%);
   transform: translateY(100%);
 }
