--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -70,6 +70,9 @@ a {
 [hidden] {
   display: none !important;
 }
+div.center:not(.ad-cnt) {
+  display: none !important;
+}
 
 /* fixed, z-index */
 #overlay,
