--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -1,9 +1,15 @@
 /* General */
 .dialog {
-  box-shadow: 0 1px 2px rgba(0, 0, 0, .15);
   border: 1px solid;
   display: block;
   padding: 0;
+}
+.dialog:not(#qr):not(#thread-watcher):not(#header-bar) {
+  box-shadow: 0 1px 2px rgba(0, 0, 0, .15);
+}
+#qr, 
+#thread-watcher {
+  box-shadow: -1px 2px 2px rgba(0, 0, 0, 0.25);
 }
 .captcha-img,
 .field {
@@ -144,6 +150,11 @@ div.center:not(.ad-cnt) {
 #header-bar {
   border-width: 0;
   transition: all .1s .05s ease-in-out;
+  box-shadow: -5px 1px 10px rgba(0, 0, 0, 0.20);
+  opacity: 0.98;
+}
+#custom-board-list .current {
+  padding: 1px 1px 4px 1px;
 }
 :root.centered-links #shortcuts {
   width: 300px;
@@ -151,6 +162,9 @@ div.center:not(.ad-cnt) {
 }
 :root.centered-links #header-bar {
   text-align: center;
+}
+#board-list {
+  font-size: 13px;
 }
 :root.centered-links #custom-board-list {
   position: relative;
@@ -206,6 +220,8 @@ div.center:not(.ad-cnt) {
 }
 #header-bar a:not(.entry):not(.close) {
   text-decoration: none;
+}
+#header-bar a:not(.entry):not(.close):not(.current) {
   padding: 1px;
 }
 #header-bar input {
