--- a/src/General/css/tomorrow.css
+++ b/src/General/css/tomorrow.css
@@ -13,10 +13,10 @@
   color: #81A2BE;
 }
 :root.tomorrow #custom-board-list a.current {
-  border-bottom: 1px solid #537ca0;
+  border-bottom: 1px solid rgba(83,124,160,0.4);
 }
 :root.tomorrow #custom-board-list .current:hover {
-  border-bottom-color: #5F89AC;
+  border-bottom-color: rgba(95,137,172,0.4);
 }
 
 /* Settings */
@@ -56,7 +56,6 @@
   color: #C5C8C6;
 }
 :root.tomorrow .entry {
-  border-bottom: 1px solid #111;
   font-size: 10pt;
 }
 :root.tomorrow .focused.entry {
