--- a/src/General/css/burichan.css
+++ b/src/General/css/burichan.css
@@ -8,6 +8,9 @@
 }
 
 /* Header */
+:root.burichan #header-bar.dialog {
+  background-color: rgba(214,218,240,0.98);
+}
 :root.burichan #header-bar, :root.burichan #header-bar #notifications {
   font-size: 11pt;
   color: #89A;
