--- a/src/General/css/futaba.css
+++ b/src/General/css/futaba.css
@@ -8,6 +8,9 @@
 }
 
 /* Header */
+:root.futaba #header-bar.dialog {
+  background-color: rgba(240,224,214,0.98);
+}
 :root.futaba #header-bar, :root.futaba #notifications {
   font-size: 11pt;
   color: #B86;
