--- a/src/General/css/yotsuba-b.css
+++ b/src/General/css/yotsuba-b.css
@@ -8,6 +8,9 @@
 }
 
 /* Header */
+:root.yotsuba-b #header-bar.dialog {
+  background-color: rgba(214,218,240,0.98);
+}
 :root.yotsuba-b #header-bar, :root.yotsuba-b #notifications {
   font-size: 9pt;
   color: #89A;
