--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -3,7 +3,7 @@
   border: 1px solid;
   display: block;
 }
-.dialog:not(#qr):not(#thread-watcher):not(#header-bar) {
+.dialog:not(#qr):not(#thread-watcher) {
   box-shadow: 0 1px 2px rgba(0, 0, 0, .15);
 }
 #qr, 
@@ -65,6 +65,21 @@ a {
 .painted {
   border-radius: 3px;
   padding: 0px 2px;
+}
+body>hr, .ad-plea-bottom + hr {
+  display: none;
+}
+.board > hr:last-of-type {
+  border-top-color: transparent !important;
+}
+div.navLinks {
+  margin-bottom: -10px !important;
+}
+.ad-plea {
+  display: none;
+}
+.ad-cnt {
+  margin: 10px !important;
 }
 
 /* 4chan style fixes */
@@ -790,6 +805,15 @@ a.hide-announcement {
 }
 .qr-link-container {
   text-align: center;
+}
+.qr-link {
+  border-radius: 3px;
+  padding: 6px 10px 5px;
+  font-weight: bold;
+  vertical-align: middle;
+  border-style: solid;
+  border-width: 1px;
+  font-size: 10pt;
 }
 .persona {
   width: 248px;
