--- a/src/General/css/tomorrow.css
+++ b/src/General/css/tomorrow.css
@@ -53,6 +53,13 @@
   border-color: rgb(129, 162, 190) !important;
   background-color: rgb(30,32,36);
 }
+:root.tomorrow .qr-link {
+  border-color: rgb(25, 27, 31) rgb(25, 27, 31) rgb(10, 12, 16);
+  background: linear-gradient(#37393D, #282A2E) repeat scroll 0% 0% transparent;
+}
+:root.tomorrow .qr-link:hover {
+  background: #282A2E;
+}
 
 /* Menu */
 :root.tomorrow #menu {
