--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -3,7 +3,7 @@
   border: 1px solid;
   display: block;
 }
-.dialog:not(#qr):not(#thread-watcher) {
+.dialog:not(#qr):not(#thread-watcher):not(#header-bar) {
   box-shadow: 0 1px 2px rgba(0, 0, 0, .15);
 }
 #qr, 
