--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -765,7 +765,7 @@ a.hide-announcement {
 :root.hide-original-post-form .postingMode,
 :root.hide-original-post-form #togglePostForm,
 #qr.autohide:not(.has-focus):not(:hover) > form,
-.postingMode ~ #qr select[data-name=thread],
+.thread #qr select[data-name=thread],
 #file-n-submit:not(.has-file) #qr-filerm {
   display: none;
 }
