--- a/src/General/css/burichan.css
+++ b/src/General/css/burichan.css
@@ -18,10 +18,10 @@
 :root.burichan #header-bar a, :root.burichan #header-bar #notifications a {
   color: #34345C;
 }
-:root.burichan #custom-board-list .current {
+:root.burichan.fixed #custom-board-list .current {
   border-bottom: 1px solid rgba(30, 30, 255, 0.2);
 }
-:root.burichan #custom-board-list .current:hover {
+:root.burichan.fixed #custom-board-list .current:hover {
   border-bottom-color: rgba(255,0,0,0.2);
 }
 
