--- a/src/General/css/yotsuba-b.css
+++ b/src/General/css/yotsuba-b.css
@@ -18,10 +18,10 @@
 :root.yotsuba-b #board-list a, :root.yotsuba-b #shortcuts a {
   color: #34345C;
 }
-:root.yotsuba-b #custom-board-list .current {
+:root.yotsuba-b.fixed #custom-board-list .current {
   border-bottom: 1px solid rgba(30, 30, 255, 0.2);
 }
-:root.yotsuba-b #custom-board-list .current:hover {
+:root.yotsuba-b.fixed #custom-board-list .current:hover {
   border-bottom-color: rgba(255,0,0,0.2);
 }
 
