Implement a theme and mascot switcher between SFW/NSFW boards

--- a/src/General/css/layout.css
+++ b/src/General/css/layout.css
@@ -580,6 +580,7 @@ th {
 .pagination-sticky-bottom.rounded-edges .pagelist {
   border-radius: 3px 3px 0 0;
 }
+.thread .pagelist,
 .pagination-hide .pagelist {
   display: none;
 }
