Better QuoteInline process

--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -90,6 +90,7 @@ div.navLinks {
 .reply > .file > .fileText {
   margin: 0 20px;
 }
+.inlined + .hashlink,
 [hidden] {
   display: none !important;
 }
