Work around a small issue causing the space after a quotelink to disappear after inlining a post and uninlining it.
Seriously.

--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -90,6 +90,10 @@ div.navLinks {
 .reply > .file > .fileText {
   margin: 0 20px;
 }
+.hashlink::before {
+  content: ' ';
+  visibility: hidden;
+}
 .inline + .hashlink,
 [hidden] {
   display: none !important;
