Fix some hover issues caused by me being a n00b when I wrote them

--- a/src/General/css/layout.css
+++ b/src/General/css/layout.css
@@ -818,8 +818,8 @@ th {
 }
 #ihover {
   position: fixed;
-  max-height: 97%;
-  max-width: 75%;
+  max-height: 94vh;
+  max-width: 75vw;
   z-index: 22;
 }
 #qp {
