Use text-decoration instead of border for forwardlinks.

--- a/css/style.css
+++ b/css/style.css
@@ -506,6 +506,15 @@ a.hide-announcement {
   text-decoration: none;
   border-bottom: 1px dashed;
 }
+@supports (text-decoration-style: dashed) or (-moz-text-decoration-style: dashed) {
+  .quotelink.forwardlink,
+  .backlink.forwardlink {
+    text-decoration: underline;
+    -moz-text-decoration-style: dashed;
+    text-decoration-style: dashed;
+    border-bottom: none;
+  }
+}
 .filtered {
   text-decoration: underline line-through;
 }
