--- a/css/style.css
+++ b/css/style.css
@@ -378,6 +378,11 @@ a[href="javascript:;"] {
 :root.index-loading .pagelist {
   display: none;
 }
+:root.removing-catalog-links .navLinks {
+  /* can't `display:none;` the text node next to the link,
+     so we hide the container instead. */
+  visibility: hidden;
+}
 #index-search {
   padding-right: 1.5em;
   width: 100px;
