--- a/css/style.css
+++ b/css/style.css
@@ -402,19 +402,21 @@ a[href="javascript:;"] {
   text-decoration: none;
 }
 .catalog-mode {
-  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 .catalog-thread {
-  display: inline-block;
-  vertical-align: top;
-  padding-top: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 165px;
+  margin-bottom: 5px;
   max-height: 320px;
-  overflow: hidden;
   word-break: break-word;
 }
 .catalog-thread > a {
-  display: inline-block;
+  flex-shrink: 0;
   position: relative;
 }
 .thumb {
@@ -443,15 +445,23 @@ a[href="javascript:;"] {
   right: 1px;
 }
 .thread-stats {
+  flex-shrink: 0;
   cursor: help;
   font-size: 10px;
   font-weight: 700;
   line-height: .8;
   margin-top: 1px;
-  float: none;
 }
 .catalog-thread .subject {
+  flex-shrink: 0;
   font-weight: 700;
+  line-height: 1;
+  text-align: center;
+}
+.catalog-thread > .comment {
+  flex-shrink: 1;
+  overflow: hidden;
+  text-align: center;
 }
 
 /* Announcement Hiding */
