Add the menu button to threads in the catalog.

--- a/css/style.css
+++ b/css/style.css
@@ -444,6 +444,12 @@ a[href="javascript:;"] {
   top: 1px;
   right: 1px;
 }
+.catalog-thread > a:not(:hover) .menu-button {
+  display: none;
+}
+.thread-icons > .menu-button > i {
+  font-size: 14px;
+}
 .thread-stats {
   flex-shrink: 0;
   cursor: help;
