--- a/css/burichan.css
+++ b/css/burichan.css
@@ -56,6 +56,6 @@
 :root.burichan .focused.entry {
   background: rgba(255, 255, 255, .33);
 }
-:root.yotsuba-b .thumb > .menu-button > i {
+:root.burichan .thumb > .menu-button > i {
   background: #EEF2FF;
 }
