--- a/css/futaba.css
+++ b/css/futaba.css
@@ -56,6 +56,6 @@
 :root.futaba .focused.entry {
   background: rgba(255, 255, 255, .33);
 }
-:root.yotsuba-b .thumb > .menu-button > i {
+:root.futaba .thumb > .menu-button > i {
   background: #FFE;
 }
