--- a/css/photon.css
+++ b/css/photon.css
@@ -56,6 +56,6 @@
 :root.photon .focused.entry {
   background: rgba(255, 255, 255, .33);
 }
-:root.yotsuba-b .thumb > .menu-button > i {
+:root.photon .thumb > .menu-button > i {
   background: #EEE;
 }
