--- a/css/tomorrow.css
+++ b/css/tomorrow.css
@@ -56,6 +56,6 @@
 :root.tomorrow .focused.entry {
   background: rgba(0, 0, 0, .33);
 }
-:root.yotsuba-b .thumb > .menu-button > i {
+:root.tomorrow .thumb > .menu-button > i {
   background: #1D1F21;
 }
