--- a/css/yotsuba.css
+++ b/css/yotsuba.css
@@ -56,6 +56,6 @@
 :root.yotsuba .focused.entry {
   background: rgba(255, 255, 255, .33);
 }
-:root.yotsuba-b .thumb > .menu-button > i {
+:root.yotsuba .thumb > .menu-button > i {
   background: #FFE;
 }
