Fix the search clear button displacing the hidden threads count.

--- a/css/style.css
+++ b/css/style.css
@@ -389,7 +389,9 @@ a[href="javascript:;"] {
 }
 #index-search-clear {
   color: gray;
-  margin-left: -1.25em;
+  position: relative;
+  left: -1.25em;
+  width: 0;
 }
 <% if (type === 'crx') { %>
 /* ``::-webkit-*'' selectors break selector lists on Firefox. */
