--- a/css/style.css
+++ b/css/style.css
@@ -469,6 +469,9 @@ a[href="javascript:;"] {
   border-radius: 0 2px 0 2px;
   font-size: 14px;
   text-align: center;
+<% if (type === 'userscript') { %>
+  line-height: normal;
+<% } %>
 }
 .thread-stats {
   flex-shrink: 0;
@@ -516,7 +519,7 @@ a.hide-announcement {
 #updater > div:last-child {
   text-align: center;
 }
-#updater input[type=number] {
+#updater input[type="number"] {
   width: 4em;
 }
 #updater:not(:hover) > div:not(.move) {
