--- a/css/style.css
+++ b/css/style.css
@@ -426,6 +426,10 @@ a[href="javascript:;"] {
   border-radius: 2px;
   box-shadow: 0 0 5px rgba(0, 0, 0, .25);
 }
+.thumb:not(.deleted-file):not(.no-file) {
+  min-width: 30px;
+  min-height: 30px;
+}
 .thumb.spoiler-file {
   background-size: 100px;
   width: 100px;
